--- a/web/static/css/googlefont.css
+++ b/web/static/css/googlefont.css
@@ -1,6 +1,6 @@
 /* cyrillic-ext */
 @font-face {
-  font-family: 'Lobster';
+  font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif;
   font-style: normal;
   font-weight: 400;
   src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zo-mM5Ez.woff2) format('woff2');
@@ -8,7 +8,7 @@
 }
 /* cyrillic */
 @font-face {
-  font-family: 'Lobster';
+  font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif;
   font-style: normal;
   font-weight: 400;
   src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zoamM5Ez.woff2) format('woff2');
@@ -16,7 +16,7 @@
 }
 /* vietnamese */
 @font-face {
-  font-family: 'Lobster';
+  font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif;
   font-style: normal;
   font-weight: 400;
   src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zo2mM5Ez.woff2) format('woff2');
@@ -24,7 +24,7 @@
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Lobster';
+  font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif;
   font-style: normal;
   font-weight: 400;
   src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zoymM5Ez.woff2) format('woff2');
@@ -32,7 +32,7 @@
 }
 /* latin */
 @font-face {
-  font-family: 'Lobster';
+  font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif;
   font-style: normal;
   font-weight: 400;
   src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zoKmMw.woff2) format('woff2');
