--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,12 +39,9 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">Macha3ir<sup></sup></div>
-        </a>
+        <div class="nav-item d-flex justify-content-center mt-2">
+            <img class="nav-item active mt-auto" src="{{ url_for('static',filename='img/Logo.png') }}" height="100" width="100">
+        </div>
 
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
@@ -108,8 +105,7 @@
         <div class="d-flex flex-column">
             <div style="margin-top: 10px;" class="row  justify-content-md-center">
                 <div class="row">
-                    <h1 id="text"> <a href="#">Classification d'opinion</a>  </h1>
-                    <h1 class="mx-2"><i class="em em-heart_eyes" aria-role="presentation" aria-label="SMILING FACE WITH HEART-SHAPED EYES"></i></h1>
+                    <h1 id="text"><a href="#">Analyse d'opinion</a> </h1>
                 </div>
             </div>
         </div>
@@ -124,11 +120,13 @@
                 <div class="d-flex flex-row justify-content-center card-body">
                     <form action="/res" method="post" id="usrform1">
                         <input type="hidden" name="id_reprocess" value="id_text">
-                        <textarea id="textarea" placeholder="Saisissez votre texte ici ..... EX :This car is beautiful. "
+                        <textarea id="textarea"
+                                  placeholder="Saisissez votre texte ici ..... EX :This car is beautiful. "
                                   rows="7" cols="100" id="input" name="input" form="usrform1"
                                   spellcheck="true" autofocus="true"></textarea>
                         <div class="d-flex flex-row justify-content-around">
-                            <button disabled type="submit" id="button" class="btn btn-primary btn-icon-split">
+                            <button disabled type="submit" id="button"
+                                    class="btcommencer btn btn-primary btn-icon-split">
                                 <span class="text">Commencer</span>
                                 <span class="icon text-white-50">
                                 <i class="fas fa-chevron-circle-right"></i>
@@ -164,7 +162,7 @@
                 </div>
                 <div class="d-flex flex-row justify-content-around">
 
-                    <a href="#" onclick="submitform()" class="btn btn-primary btn-icon-split">
+                    <a href="#" onclick="submitform()" class="btcommencer btn btn-primary btn-icon-split">
                 <span class="icon text-white-50">
                 <i class="fas fa-chevron-circle-right"></i>
             </span>
@@ -192,15 +190,16 @@
                             </div>
 
                         </div>
-                         <div class="d-flex flex-row justify-content-center my-2">
-                                <button id="button_file" hidden onclick="starprogress()" class="btn btn-secondary btn-icon-split "
-                                        type="submit">
-                                    <span class="text">Commencer</span>
-                                    <span class="icon text-white-50">
+                        <div class="d-flex flex-row justify-content-center my-2">
+                            <button id="button_file" hidden
+                                    class="btcommencer btn btn-secondary btn-icon-split "
+                                    type="submit">
+                                <span class="text">Commencer</span>
+                                <span class="icon text-white-50">
                                 <i class="fas fa-chevron-circle-right"></i>
                                 </span>
-                                </button>
-                            </div>
+                            </button>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -225,14 +224,57 @@
 
     <!-- Scroll to Top Button-->
 
+    <!-- Modal -->
+    <div  class="modal fade" id="dialog_progrss" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div  class="modal-dialog modal-dialog-centered" role="document">
+            <div style="background-color: rgba(0,0,0,0); border: 5px solid transparent;" class="modal-content">
+                <div style="background-color: rgba(0,0,0,0); border: 5px solid transparent;" class="modal-body d-flex justify-content-center">
+                    <div  class="loadingio-spinner-spin-g599boslcbo">
+                        <div class="loadingio-spinner-spin-vqhc8fqgo9a">
+                            <div class="ldio-0qfj4n283gz">
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                                <div>
+                                    <div></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Bootstrap core JavaScript-->
+    <script src="{{ url_for('static',filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="{{ url_for('static',filename='vendor/jquery/jquery.min.js') }}"></script>
     <script src="{{ url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="{{ url_for('static',filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
+
 
     <!-- Custom scripts for all pages-->
     <script src="{{ url_for('static',filename='js/sb-admin-2.min.js') }}"></script>
@@ -245,15 +287,13 @@
     <script src="{{ url_for('static',filename='js/demo/chart-pie-demo.js') }}"></script>
 
     <script src="{{ url_for('static',filename='js/main.js') }}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <script src="{{ url_for('static',filename='js/myfunction.js') }}"></script>
     <script src="{{ url_for('static',filename='js/createinterface.js') }}"></script>
 
-    <!-- progress bar-->
-    <script src="{{ url_for('static',filename='js//dist/jquery.progressBarTimer.min.js') }}"></script>
-
 
     <script>
+
         $('#textarea').on('keyup', function () {
             let empty = false;
 
@@ -266,9 +306,13 @@
             else
                 $('#button').attr('disabled', false);
         });
+
+        $(".btcommencer").click(function () {
+            $('#dialog_progrss').modal('show');
+        });
+
     </script>
-    <script>
-    </script>
+
 </div>
 </body>
 
