--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -40,7 +40,8 @@
 
         <!-- Sidebar - Brand -->
         <div class="nav-item d-flex justify-content-center mt-2">
-            <img class="nav-item active mt-auto" src="{{ url_for('static',filename='img/Logo.png') }}" height="100" width="100">
+            <img class="nav-item active mt-auto" src="{{ url_for('static',filename='img/Logo.png') }}" height="100"
+                 width="120">
         </div>
 
         <!-- Divider -->
@@ -58,7 +59,7 @@
 
         <!-- Heading -->
         <div class="sidebar-heading">
-            Type D'insertion
+            Type D'acquisition
         </div>
 
 
@@ -102,12 +103,15 @@
     <div id="content-wrapper" class="d-flex flex-column ">
 
         <!-- piece one top -->
-        <div class="d-flex flex-column">
-            <div style="margin-top: 10px;" class="row  justify-content-md-center">
-                <div class="row">
-                    <h1 id="text"><a href="#">Analyse d'opinion</a> </h1>
-                </div>
+        <div class="d-flex flex-column mt-2 ">
+            <div class="d-flex flex-row justify-content-center">
+                <h6> Traitement automatique des textes multilingues par un modèle unifié indépendant de la langue utilisé : </h6>
             </div>
+            <div class="d-flex flex-row justify-content-center">
+                <H6> Application à l’analyse d’opinion</H6>
+            </div>
+
+
         </div>
         <!-- piece two medium -->
         <div id="maincontainerglobal" class="d-flex flex-column">
@@ -155,14 +159,14 @@
                     Cette option permettre d'effectuer une recherche sur twitter
                 </div>
                 <div class="d-flex flex-row justify-content-around px-2 py-2">
-                    <form method="post" id="usrform2" action="/GetTextFromTwitter">
+                    <form method="post" id="usrform2" action="/res">
                         <input type="hidden" name="id_reprocess" value="twitter">
                         <input type="text" class="form-control" name="subject" placeholder="#HashTag">
                     </form>
                 </div>
                 <div class="d-flex flex-row justify-content-around">
 
-                    <a href="#" onclick="submitform()" class="btcommencer btn btn-primary btn-icon-split">
+                    <a href="#" onclick="submitform2()" class="btcommencer btn btn-primary btn-icon-split">
                 <span class="icon text-white-50">
                 <i class="fas fa-chevron-circle-right"></i>
             </span>
@@ -225,12 +229,13 @@
     <!-- Scroll to Top Button-->
 
     <!-- Modal -->
-    <div  class="modal fade" id="dialog_progrss" tabindex="-1" role="dialog"
+    <div class="modal fade" id="dialog_progrss" tabindex="-1" role="dialog"
          aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div  class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div style="background-color: rgba(0,0,0,0); border: 5px solid transparent;" class="modal-content">
-                <div style="background-color: rgba(0,0,0,0); border: 5px solid transparent;" class="modal-body d-flex justify-content-center">
-                    <div  class="loadingio-spinner-spin-g599boslcbo">
+                <div style="background-color: rgba(0,0,0,0); border: 5px solid transparent;"
+                     class="modal-body d-flex justify-content-center">
+                    <div class="loadingio-spinner-spin-g599boslcbo">
                         <div class="loadingio-spinner-spin-vqhc8fqgo9a">
                             <div class="ldio-0qfj4n283gz">
                                 <div>
