--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -40,13 +40,12 @@
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-        <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">Macha3ir</div>
-        </a>
+                <!-- Sidebar - Brand -->
+        <div class="nav-item d-flex justify-content-center mt-2">
+            <img class="nav-item active mt-auto" src="{{ url_for('static',filename='img/Logo.png') }}" height="100"
+                 width="120">
+        </div>
+
 
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
@@ -157,12 +156,16 @@
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column ">
         <!-- piece one top -->
-        <div class="d-flex flex-column">
-            <div style="margin-top: 10px;" class="row  justify-content-md-center">
-                <div class="row">
-                    <h1 id="text"><a href="#">Analyse d'opinion</a></h1>
-                </div>
+        <!-- piece one top -->
+        <div class="d-flex flex-column mt-2 ">
+            <div class="d-flex flex-row justify-content-center">
+                <h6> Traitement automatique des textes multilingues par un modèle unifié indépendant de la langue utilisé : </h6>
             </div>
+            <div class="d-flex flex-row justify-content-center">
+                <H6> Application à l’analyse d’opinion</H6>
+            </div>
+
+
         </div>
 
         <!-- piece two medium -->
@@ -186,7 +189,7 @@
                                       <i class="fas fa-times-circle"></i>
                                     </span>
                             </button>
-                            <button onclick="reprocess_correction()"
+                            <button hidden="true" id="bt_correction" onclick="reprocess_correction()"
                                     class="btcommencer btn btn-outline-danger btn-sm float-right btn-icon-split">
                                 <div>
                                     <span class="text">Retraitement</span>
@@ -212,9 +215,10 @@
                                 <div class="d-flex flex-row justify-content-center card-body">
                                     <form class="d-flex " id="form_correction" method="post" action="/res">
                                         <input type="hidden" name="id_reprocess" value="form_correction">
-                                        <textarea lang="en" rows="7" cols="100" name="content" class="form-control"
+                                        <textarea onkeyup="retraitement_activate_texte()" lang="en" rows="7" cols="100" name="content" class="form-control"
                                                   id="exampleFormControlTextarea1"
                                                   rows="3">{{session['content']}}</textarea>
+                                        <input type="hidden" id="text_original" value="{{session['content']}}">
                                     </form>
 
                                 </div>
@@ -530,15 +534,15 @@
                                                                         dic=session['dictionnaire_model_global'][i]%}
                                                                         Ce model contien :
                                                                         {% if dic['connector']!="" %}
-                                                                        le connecteur {{dic['connector']}} et
+                                                                        le connecteur "{{dic['connector']}}" et
                                                                         {% endif %}
 
 
                                                                         {% if dic['verb']|length >0 %}
-                                                                        {{dic['verb']|length}} verbe:
+                                                                        "{{dic['verb']|length}}" verbe:
                                                                         {% for i in range(dic['verb']|length) %}
                                                                         le verbe numero {{i+1}} est
-                                                                        {{dic['verb'][i]['verb']}}
+                                                                        "{{dic['verb'][i]['verb']}}"
                                                                         {% if dic['verb'][i]['negation']!= False or
                                                                         dic['verb'][i]['adverbe'] | length >0 %}
                                                                         avec
@@ -546,7 +550,7 @@
                                                                         negation et
                                                                         {% endif %}
                                                                         {% for adv in dic['verb'][i]['adverbe'] %}
-                                                                        {{adv}}
+                                                                        "{{adv}}"
                                                                         {% endfor %}
                                                                         {% endif %}
 
@@ -555,10 +559,10 @@
 
                                                                         {% if dic['adjective']|length >0 %}
                                                                         <br>
-                                                                        {{dic['adjective']|length}} adjective:
+                                                                        "{{dic['adjective']|length}}" adjective:
                                                                         {% for i in range(dic['adjective']|length) %}
                                                                         l'adjective numero {{i+1}} est
-                                                                        {{dic['adjective'][i]['adjective']}}
+                                                                        "{{dic['adjective'][i]['adjective']}}"
                                                                         {% if dic['adjective'][i]['negation']!= False or
                                                                         dic['adjective'][i]['adverbe'] | length >0 %}
                                                                         avec
@@ -566,7 +570,7 @@
                                                                         negation et
                                                                         {% endif %}
                                                                         {% for adv in dic['adjective'][i]['adverbe'] %}
-                                                                        {{adv}}
+                                                                        "{{adv}}"
                                                                         {% endfor %}
                                                                         {% endif %}
 
@@ -575,9 +579,9 @@
 
                                                                         {% if dic['noun']|length >0 %}
                                                                         <br>
-                                                                        {{dic['noun']|length}} noms:
+                                                                        "{{dic['noun']|length}}" noms:
                                                                         {% for i in range(dic['noun']|length) %}
-                                                                        le nom numero {{i+1}} est : {{dic['noun'][i]}}
+                                                                        le nom numero {{i+1}} est : "{{dic['noun'][i]}}"
 
                                                                         {% endfor %}
                                                                         {% endif %}
